[package]
name = "simple-rust-http-server"
version = "0.0.1"
edition = "2021"
authors = ["Wender Couto"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "1.1.0"
serde_json = "1.0.114"
base64 = "0.22.0"
walkdir = "2.5.0"
percent-encoding = "2.3.1"